fix overflow keyboard issue and css

--- a/src/App.css
+++ b/src/App.css
@@ -63,14 +63,14 @@ header {
 }
 
 h1 {
-  font-size: clamp(2rem, 7vw, 4rem);
+  font-size: clamp(1.5rem, 7vw, 4rem);
   background-image: linear-gradient(to right, var(--gradient-left), var(--gradient-right));
   -webkit-background-clip: text;
   color: transparent;
 }
 
 h2 {
-  font-size: 1.8rem;
+  font-size: clamp(1.6rem, 2vw, 2rem); 
 }
 
 .a11y-svg {
