--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -21,7 +21,7 @@
 }
 
 .goodluck {
-  font-size: 3rem;
+  font-size: clamp(1.5rem, 5vw, 3rem);
 }
 
 .dark-theme img {
