--- a/src/components/Rating/Rating.css
+++ b/src/components/Rating/Rating.css
@@ -8,10 +8,10 @@ aside {
 
 .participants {
   width: fit-content;
-  max-height: 30em;
+  min-height: 25em;
   overflow-y: auto;
   padding: 0.5em 2em;
-  border: 1px dotted var(--outline-color);
+  border: 1px solid var(--outline-color);
   border-radius: 5px;
 }
 
